--- a/e-shop/src/App.css
+++ b/e-shop/src/App.css
@@ -81,8 +81,12 @@ color: gray;
   width: 350px;
   border-radius: 60px;
   margin-top: 30px;
+  cursor: pointer;
+  transition: all 0.5s;
 }
-
+.add-to-cart-btn:hover{
+  background-color: rgb(45, 45, 45);
+}
 .add-to-favourite-btn{
   background-color: white;
   color: black;
@@ -199,4 +203,34 @@ justify-content: space-evenly;
   border-radius: 10px;
   width: 90%;
   max-width: 400px;
+
+  img{
+    border-radius: 5px;
+    margin-top: 20px;
+
+    margin-bottom: 20px;
+  }
+}
+
+.cartArticle{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
+  p{
+    font-size: 18px;
+  }
+}
+
+#articleTitle{
+  font-weight: 600;
+}
+
+#articlePrice{
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.cartArticleText{
+  margin-bottom: 60px;
 }
